# seedlings

./: Dockerfile  Makefile  README.md  copier.yml  renovate.json
.github/workflows/: test-python.yml
python/: .gitignore  .pre-commit-config.yaml  Dockerfile.j2  Justfile.j2  LICENSE.j2  README.md.j2  cookiecutter.json  copier.yml  pdm.toml  pyproject.toml.j2  renovate.json  setup.py  tox.ini  tox.ini.j2  {% if ci_platform == 'gitlab_ci' %}.gitlab-ci.yml{% endif %}
python/.github/actions/common/: action.yml
python/.github/workflows/: docker.yml  lint.yml  package.yml  pex.yml  test.yml  {% if enable_release_ci %}release.yml{% endif %}
python/hooks/: pre_gen_project.py
python/readme/: Quickstart.md
python/src/{{ package_name }}/: __init__.py.j2  cli.py.j2  py.typed
python/src/{{ package_name }}/example_module/: __init__.py.j2  example_class.py.j2
python/tests/: __init__.py.j2  test_cli.py.j2
python/tests/test_{{ package_name }}/: test_{{ package_name }}.py.j2
python/{% if ci_platform == 'github_actions' %}.github{% endif %}/actions/common/: action.yml
python/{% if ci_platform == 'github_actions' %}.github{% endif %}/workflows/: lint.yml  package.yml  pex.yml  test.yml  {% if enable_release_ci %}release.yml{% endif %}
python/{% if ci_platform == 'gitlab_ci' %}.gitlab-ci{% endif %}/: lint.yml  package.yml  pex.yml  setup.yml  test.yml
python/{{cookiecutter.project_slug}}/: Dockerfile  pyproject.toml  tox.ini
python/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py
python/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/example_module/: __init__.py  example_class.py
python/{{cookiecutter.project_slug}}/tests/: test_cli.py
python/{{cookiecutter.project_slug}}/tests/test_{{cookiecutter.project_slug}}/: test_{{cookiecutter.project_slug}}.py
